@@ -1,4 +1,5 @@
-package com.LocalService.lsp.config; // Make sure this package name is correct
+package com.LocalService.lsp.config;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
@@ -28,33 +29,66 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // 1. Apply CORS configuration
-                .cors(Customizer.withDefaults())
-                // 2. Disable CSRF protection for stateless APIs
+                // 1. Apply CORS configuration first in the chain
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+                // 2. Disable CSRF for stateless REST APIs to prevent 403 on POST/PUT
                 .csrf(AbstractHttpConfigurer::disable)
+
                 // 3. Configure session management to be stateless
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
                 // 4. Set up authorization rules
                 .authorizeHttpRequests(auth -> auth
-                        // Allow all requests to the auth and health endpoints
-                        .requestMatchers("/api/auth/**", "/api/**").permitAll()
-                        // Require authentication for any other request
+                        // Permit all API endpoints for now to ensure connectivity
+                        // Note: You can narrow this down later once authentication is strictly required
+                        .requestMatchers("/api/**").permitAll()
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/transactions/**").permitAll()
+                        .requestMatchers("/api/providers/**").permitAll()
+
+                        // Fallback: any other requests must be authenticated
                         .anyRequest().authenticated()
                 );
+
         return http.build();
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Allow your frontend domain
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://taraas.com", "https://www.taraas.com","https://api.taraas.com"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+
+        // 5. Expanded Allowed Origins
+        // Added 127.0.0.1 to prevent mismatches between localhost and loopback IP
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5173",
+                "http://127.0.0.1:5173",
+                "https://taraas.com",
+                "https://www.taraas.com",
+                "https://api.taraas.com"
+        ));
+
+        // 6. Explicitly define allowed methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+
+        // 7. Refined headers to support Authorization and custom headers
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Cache-Control",
+                "X-Requested-With",
+                "Accept",
+                "Origin"
+        ));
+
         configuration.setAllowCredentials(true);
+
+        // 8. Apply to ALL paths
+        // Changing from "/api/**" to "/**" ensures pre-flight checks are handled
+        // correctly regardless of how the request enters the context.
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 }
-
